--- a/jdk7-date-time/pom.xml
+++ b/jdk7-date-time/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.nbp.welab</groupId>
-	<artifactId>freemarker-xss-test</artifactId>
+	<artifactId>jdk7-date-time</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
